--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
             <h2>Contato</h2>
             <div class="contact-links">
                 <a href="mailto:tonibmartins@gmail.com"><i class="fas fa-envelope"></i>Email</a>
-                <a href="https://linkedin.com/in/antmartins" target="_blank"><i class="fab fa-linkedin"></i>LinkedIn</a>
+                <a href="https://www.linkedin.com/in/antmartins" target="_blank"><i class="fab fa-linkedin"></i>LinkedIn</a>
                 <a href="https://github.com/tonibmartins" target="_blank"><i class="fab fa-github"></i>GitHub</a>
             </div>
         </section>
